# billsnap

./: .gitignore  README.md  index.html  privacy.html  robots.txt  sitemap.xml  terms.html
backend/: billsnap-backend.spec  main.py  requirements.txt
backend/app/api/: backup.py  customer.py  export.py  inventory.py  invoice.py  report.py  settings_api.py
backend/app/core/: paths.py
backend/app/database/: db.py
backend/app/models/: models.py
backend/app/repositories/: customer_repo.py  inventory_repo.py  invoice_repo.py
backend/app/schemas/: schemas.py
backend/app/services/: backup_service.py  excel_service.py  invoice_service.py  pdf_service.py
backend/app/utils/: invoice_num.py  logger.py
backend/tests/: conftest.py  test_backup.py  test_customer.py  test_export.py  test_inventory.py  test_invoice.py  test_settings.py
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md  DEVELOPER_GUIDE.md  FUTURE_IMPROVEMENTS.md  INSTALLATION.md  TROUBLESHOOTING.md  USER_MANUAL.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/hooks/: useCompanies.ts  useKeyboard.ts  useSearch.ts
frontend/src/pages/: Backup.tsx  CompanySetup.tsx  Customers.tsx  Dashboard.tsx  Export.tsx  Inventory.tsx  (+5 more)
scripts/: build-all.ps1  build-backend.ps1  generate-icons.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  sidecar.rs
(+32 files in other folders)
